[package]
name = "parity-db"
version = "0.4.6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/parity-db/"
description = "Key-value database for the blockchain"

[features]
instrumentation = []
bench = []

[dependencies]
blake2 = "0.10.4"
crc32fast = "1.2.0"
fs2 = "0.4.3"
hex = "0.4.2"
libc = "0.2"
log = "0.4.8"
lz4 = "1.24.0"
memmap2 = "0.5"
parking_lot = "0.12.0"
rand = "0.8.4"
snap = "1"
loom = { version = "0.5.1", optional = true }
siphasher = "0.3.10"

[dev-dependencies]
env_logger = "0.10.0"
fdlimit = "0.2.1"
rand = { version = "0.8.2", features = ["small_rng"] }
tempfile = "3.2"

[profile.release]
panic = "abort"
#codegen-units = 1
#lto = "fat"
debug = true

[workspace]
members = [
	".",
	"admin",
]
