[package]
name = "parity-db"
version = "0.5.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/parity-db/"
description = "Key-value database for the blockchain"

[features]
instrumentation = []
bench = []

[dependencies]
blake2 = "0.10.6"
crc32fast = "1.4.2"
fs2 = "0.4.3"
hex = "0.4.3"
libc = "0.2"
log = "0.4.27"
lz4 = "1.28.1"
memmap2 = "0.9"
parking_lot = "0.12.3"
rand = "0.9.1"
snap = "1"
loom = { version = "0.7.2", optional = true }
siphasher = "1.0.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
fdlimit = "0.3.0"
rand = { version = "0.9.1", features = ["small_rng"] }
tempfile = "3.19"

[profile.release]
panic = "abort"
#codegen-units = 1
#lto = "fat"
debug = true

[workspace]
members = [
	".",
	"admin",
]
