[package]
name = "parity-db-admin"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
publish = false
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.10.0", default-features = false, features = [
    "auto-color",
    "humantime",
] }
fdlimit = "0.2.1"
log = "0.4.8"
parity-db = { path = ".." }
parking_lot = "0.12.0"
rand = { version = "0.8.5", features = ["small_rng"] }
blake2 = "0.10.4"
blake3 = { version = "1.5.0", features = ["neon"] }
siphasher = "1.0.0"
trie-db = { git = "https://github.com/cheme/trie", branch = "cheme/new-trie", features = [
    "test_utils",
] }
hash256-std-hasher = { git = "https://github.com/cheme/trie", branch = "cheme/new-trie" }
reference-trie = { git = "https://github.com/cheme/trie", branch = "cheme/new-trie" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"
