[package]
name = "parity-db-admin"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
publish = false
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color", "humantime"] }
fdlimit = "0.3.0"
log = "0.4.27"
parity-db = { path = ".." }
parking_lot = "0.12.3"
rand = { version = "0.9.1", features = ["small_rng"] }
blake2 = "0.10.6"
siphasher = "1.0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"
