[package]
name = "stress"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
publish = false
edition = "2018"

[dependencies]
env_logger = { version = "0.7.1" }
log = { version = "0.4.8" }

[dependencies.parity-db]
path = ".."

[dependencies.rand]
features = ["small_rng"]
version = "0.7.3"
