[package]
name = "migrate"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
publish = false
edition = "2018"

[dependencies]
parity-db = { path = ".." }
log = { version = "0.4.8" }
fdlimit = "0.2.1"

[dependencies.env_logger]
version = "0.7.1"
#default-features = false

[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = "0.3.0"
